# webapi/docs/swagger.json
@@ -288,7 +288,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/http.WordDtoIn"
+                            "$ref": "#/definitions/http.WordDtoUpdate"
                         }
                     }
                 ],
@@ -364,6 +364,26 @@
                 }
             }
         },
+        "http.WordDtoUpdate": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "string"
+                },
+                "difficulty": {
+                    "type": "string"
+                },
+                "eng_text": {
+                    "type": "string"
+                },
+                "native_text": {
+                    "type": "string"
+                },
+                "transcription": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Category": {
             "type": "object",
             "properties": {
@@ -380,6 +400,9 @@
             "type": "object",
             "properties": {
                 "category_id": {
+                    "type": "string"
+                },
+                "confirmed_at": {
                     "type": "string"
                 },
                 "confirmed_status": {
