# webapi/models/word.go
@@ -9,4 +9,5 @@ type Word struct {
 	CategoryId      string `bson:"category_id"      json:"category_id"`
 	ConfirmedUserId string `bson:"confirmed_user_id" json:"confirmed_user_id"`
 	ConfirmedStatus string `bson:"confirmed_status" json:"confirmed_status"`
+	ConfirmedAt     string `bson:"confirmed_at" json:"confirmed_at"`
 }
